--- a/roles/ansible-role-airtel-service-linux/defaults/main.yml
+++ b/roles/ansible-role-airtel-service-linux/defaults/main.yml
@@ -2,10 +2,10 @@
 # defaults file for ansible-role-airtel-service-linux
 
 #    Variables for Services
-check_services:
-  - postfix.service
-  - snmpd.service
-  - vsftpd.service
-  - irqbalance.service
-  - dovecot.service
+#check_services:
+#  - postfix.service
+#  - snmpd.service
+#  - vsftpd.service
+#  - irqbalance.service
+#  - dovecot.service
 
